--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,11 +1,14 @@
 $black-c: #111;
 $white-c: #fff;
 $red-c: rgb(255, 70, 70);
-$grey-c: #373737;
+$grey-c: #9c9c9c;
 $box-shadow: 0px 0px 8px rgba(1, 1, 1, 0.5);
 $input-border-c: rgba(0, 0, 0, 0.5);
-$input-background-c: #C6C6C6;
-$submit-button-c: #4BCA7E;
-$submit-button-hover-c: #44b872;
-$auth-form-background-color: #D9D9D9;
+$input-background-c: #dadada;
+$submit-button-c: #68ea9c;
+$submit-button-hover-c: #52e38c;
+$link-c: #56c382;
+$link-hover-c: #46a16a;
+$valid-c: #56c382;
+$auth-form-background-c: #ebebeb;
 $background-color: #E6E6E6;
