Styling, i dont have time to provide longer commit message

--- a/src/lib/scss/variables.scss
+++ b/src/lib/scss/variables.scss
@@ -7,8 +7,11 @@ $input-border-c: rgba(0, 0, 0, 0.5);
 $input-background-c: #dadada;
 $submit-button-c: #68ea9c;
 $submit-button-hover-c: #52e38c;
+$red-button-c: rgb(255, 120, 120);
+$red-button-hover-c: rgb(255, 99, 99);
 $link-c: #56c382;
 $link-hover-c: #46a16a;
 $valid-c: #56c382;
 $auth-form-background-c: #ebebeb;
 $background-color: #E6E6E6;
+$section-background-c: #f9f9f9;
